로그인 페이지 최종

--- a/signin/index.html
+++ b/signin/index.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="../css/common.css">
-    <link rel="stylesheet" href="../css/signin.css">
+    <link rel="stylesheet" href="../css/singin.css">
 
      <script defer src="../js/common.js"></script>
 </head>
@@ -43,7 +43,7 @@
             <div class="sub-menu">
                 <ul class="menu">
                     <li>
-                        <a href="/singin">Sign In</a>
+                        <a href="/signin/index.html">Sign In</a>
                     </li>
                     <li>
                         <a href="javascript:void(0)">MY Starbucks</a>
